Proximity search working

--- a/templates/results.html
+++ b/templates/results.html
@@ -23,9 +23,6 @@
 		    <div class="w3-section w3-bottombar w3-padding-16">
 		      <span class="w3-margin-right">Filter:</span> 
 		      <button class="w3-button w3-black">ALL</button>
-		      <button class="w3-button w3-white"><i class="fa fa-diamond w3-margin-right"></i>Design</button>
-		      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-photo w3-margin-right"></i>Photos</button>
-		      <button class="w3-button w3-white w3-hide-small"><i class="fa fa-map-pin w3-margin-right"></i>Art</button>
 		    </div>
 		    </div>
 		  </header>
@@ -33,70 +30,70 @@
 		  <!-- First Photo Grid-->
 		  <div class="w3-row-padding">
 
- <div class="w3-panel w3-container w3-margin-bottom">
+ 
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/ask/answers/100314/why-do-bitcoins-have-value.asp' target='_blank'>Why do Bitcoins have value? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/investing/top-drips-and-picks-next-25-years/' target='_blank'>Top DRIPs and Picks for the Next 25 Years | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/ask/answers/100314/what-are-advantages-paying-bitcoin.asp' target='_blank'>What are the advantages of paying with Bitcoin? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/financial-edge/0612/jp-morgan-the-other-side-of-the-hedge.aspx' target='_blank'>JP Morgan: The Other Side Of The Hedge</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/ask/answers/121515/bitcoin-legal-us.asp' target='_blank'>Is Bitcoin legal in the US? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/terms/s/sellside.asp' target='_blank'>Sell Side</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/ask/answers/061915/how-does-block-chain-prevent-doublespending-bitcoins.asp' target='_blank'>How does a block chain prevent double-spending of Bitcoins? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/news/spotify-closest-nflx-music-set-soar-jp-morgan/' target='_blank'>Spotify ‘Closest’ to NFLX for Music, Set To Soar: JP Morgan | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/ask/answers/063015/what-does-block-chain-record-bitcoin-exchange-transaction.asp' target='_blank'>What does a block chain record in a bitcoin exchange transaction? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/news/microsoft-big-banks-unite-form-massive-ethereum-consortium-jpmmsft/' target='_blank'>Microsoft, Big Banks Unite to form Massive Ethereum Consortium (JPM,MSFT) | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/tech/what-bitcoin-gold-exactly/' target='_blank'>What is Bitcoin Gold, Exactly? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/terms/b/block-height.asp' target='_blank'>Block Height Definition | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/news/should-you-hodl-bitcoin/' target='_blank'>Should You HODL Bitcoin?  | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/terms/f/full-node.asp' target='_blank'>Full Node Definition | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/tech/what-determines-value-1-bitcoin/' target='_blank'>What Determines the Price of 1 Bitcoin? | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/terms/o/onchain-governance.asp' target='_blank'>On-Chain Governance Definition | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/terms/b/bitcoin.asp' target='_blank'>Bitcoin</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/terms/b/blockchain.asp' target='_blank'>Blockchain Definition | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/articles/investing/032615/how-bitcoin-can-change-world.asp' target='_blank'>How Bitcoin Can Change The World | Investopedia</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/news/mit-tech-review-reveals-plan-destroy-bitcoin/' target='_blank'>MIT Tech Review Reveals Plan to ‘Destroy’ Bitcoin | Investopedia</a></b></p>
 		            </div>
 		        </div>
-                     <div class="w3-panel w3-container w3-margin-bottom">
+                     
+                        <div class="w3-panel w3-container w3-margin-bottom">
 		            <div class="w3-container w3-white">
-                                <p><b><a href='https://www.investopedia.com/tech/bitcoin-vs-bitcoin-cash-whats-difference/' target='_blank'>"Bitcoin vs. Bitcoin Cash: What's the Difference?  | Investopedia"</a></b></p>
-			        <p>Summary goes here</p>
+                                <p><b><a href='https://www.investopedia.com/news/google-goldman-sachs-and-citigroup-are-preparing-blockchain-future/' target='_blank'>Google, Goldman Sachs And Citigroup Are Preparing For A Blockchain Future  | Investopedia</a></b></p>
 		            </div>
 		        </div>
                     		  <!-- Pagination -->
